// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxGroup should render component with label 1`] = `
<styled.div>
  <Styled(styled.div)
    size="big"
    theme={Object {}}
  >
    CheckboxGroup
  </Styled(styled.div)>
  <styled.div
    key="0"
    size="big"
  >
    <Component
      checked={false}
      label="First item"
      onChange={[Function]}
      size="big"
    />
  </styled.div>
  <styled.div
    key="1"
    size="big"
  >
    <Component
      checked={false}
      label="Second item"
      onChange={[Function]}
      size="big"
    />
  </styled.div>
  <styled.div
    key="2"
    size="big"
  >
    <Component
      checked={false}
      label="Third item"
      onChange={[Function]}
      size="big"
    />
  </styled.div>
</styled.div>
`;

exports[`CheckboxGroup should render component with required properties 1`] = `
<styled.div>
  <styled.div
    key="0"
    size="big"
  >
    <Component
      checked={false}
      label="First item"
      onChange={[Function]}
      size="big"
    />
  </styled.div>
  <styled.div
    key="1"
    size="big"
  >
    <Component
      checked={false}
      label="Second item"
      onChange={[Function]}
      size="big"
    />
  </styled.div>
  <styled.div
    key="2"
    size="big"
  >
    <Component
      checked={false}
      label="Third item"
      onChange={[Function]}
      size="big"
    />
  </styled.div>
</styled.div>
`;

exports[`CheckboxGroup should render component with small size 1`] = `
<styled.div>
  <styled.div
    key="0"
    size="small"
  >
    <Component
      checked={false}
      label="First item"
      onChange={[Function]}
      size="small"
    />
  </styled.div>
  <styled.div
    key="1"
    size="small"
  >
    <Component
      checked={false}
      label="Second item"
      onChange={[Function]}
      size="small"
    />
  </styled.div>
  <styled.div
    key="2"
    size="small"
  >
    <Component
      checked={false}
      label="Third item"
      onChange={[Function]}
      size="small"
    />
  </styled.div>
</styled.div>
`;
